--- a/options.html
+++ b/options.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>What Is This Code? - Settings</title>
+    <title>CodeClarify? - Settings</title>
     <style>
         * {
             margin: 0;
@@ -307,7 +307,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>🔍 What Is This Code?</h1>
+            <h1>🔍 CodeClarify?</h1>
             <p>Configure your AI-powered code explanation assistant</p>
         </div>
 
