--- a/popup.html
+++ b/popup.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>What Is This Code?</title>
+    <title>CodeClarify?</title>
     <style>
         * {
             margin: 0;
@@ -277,7 +277,7 @@
 </head>
 <body>
     <div class="header">
-        <h1>🔍 What Is This Code?</h1>
+        <h1>🔍 CodeClarify?</h1>
         <p>AI-powered code explanation tool</p>
     </div>
 
